bin_PROGRAMS=test_subset_sum

#if we use gurobi
#test_subset_sum_CPPFLAGS = -I/opt/gurobi/include
#test_subset_sum_LDFLAGS = -L/opt/gurobi/lib -Wl,-rpath,/opt/gurobi/lib
#test_subset_sum_LDADD = -lgurobi_c++ -lgurobi70

test_subset_sum_SOURCES = test_subset_sum.cc \
						  pointer.cc pointer.h \
						  subset_sum.cc subset_sum.h 
